# mcp-devdiag

./: .env.devdiag  .env.example  .gitignore  .gitleaksignore  .pre-commit-config.yaml  CHANGELOG.md  DEPLOYMENT.md  FINALIZATION_SUMMARY.md  MCP_STDIO_SHIPPED.md  Makefile  PRODUCTION_ENHANCEMENTS_V0.4.0.md  README.md  READY-TO-MERGE.md  RELEASE.md  RELEASE_NOTES_v0.4.0.md  RUNBOOK.md  SECURITY.md  TODO.md  devdiag.yaml  docker-compose.devdiag.yml  pyproject.toml  requirements-dev.txt
.github/: ACTIONS_CONFIG.md  PR_v0.3.0_body.md  RELEASE_NOTES_v0.2.0.md  dependabot.yml  pull_request_template.md
configs/: prod.devdiag.yaml  staging.devdiag.yaml
dashboards/: devdiag.json
deployments/: OPERATIONS.md  PHASE_21_SUMMARY.md  backup.ps1  backup.sh  create-grafana-user.sql  docker-compose.yml  health-checks.sql  kubernetes.yaml  postgres-init.sql  postgres.devdiag.yml  restore.sh  retention-cleanup.sh  retention-cleanup.sql  test-data.sql
docs/: ADDONS.md  ADDONS_SUMMARY.md  ANALYTICS_WAREHOUSE.md  MARKETING.md  MCP_STDIO.md  NEXT_STEPS.md  PYPI_PRODUCTION_READY.md  PYPI_TRUSTED_PUBLISHING.md  QUICK_REFERENCE.md  SECURITY_OPS_CHECKLIST.md  TABLEAU_DASHBOARDS.md  iam-devdiag-s3.json  s3-bucket-policy.json
examples/: devdiag-staging.yaml
frontend/: devCapture.ts
infra/: .env.devdiag.infra.example  ALERTS.md  APPLYLENS_INTEGRATION.md  FINALIZATION_CHECKLIST.md  JWT_SETUP.md  README.md  ROLLOUT_CHECKLIST.md  docker-compose.devdiag.yml  generate_devdiag_tokens.py
mcp_devdiag/: __init__.py  config.py  export_s3.py  security.py  tools_devdiag.py  tools_diag.py  (+1 more)
(+85 files in other folders)
