[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-devdiag"
version = "0.1.0"
description = "MCP server for autonomous dev diagnostics (logs, CORS, env, network)."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Leo Klemet" }]
requires-python = ">=3.10"
dependencies = [
  "fastmcp>=0.2.0",
  "httpx>=0.27.0",
  "pydantic>=2"
]

[project.scripts]
mcp-devdiag = "mcp_devdiag.server:main"

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
strict = false
